...

    Text(
        text = stringResource(R.string.login),
        style = typography.headlineLarge,
        modifier = Modifier
            .padding(vertical = 30.dp)
            .testTag("login_form_header")
    )

    // email field
    OutlinedTextField(
        state = email,
        isError = isEmailError(email.text.toString()),
...
            disabledContainerColor = colorScheme.tertiary,
            errorContainerColor = colorScheme.background
        ),
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .padding(bottom = 10.dp)
            .testTag("login_email_field")
    )

    // password field
    OutlinedTextField(
        value = password,
        onValueChange = { it -> password = it },
...
            focusedContainerColor = colorScheme.background,
            disabledContainerColor = colorScheme.tertiary,
            errorContainerColor = colorScheme.background
        ),
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .testTag("login_password_field")
    )
    // forgot password btn
    Column(Modifier.fillMaxWidth()) {
        TextButton(
            onClick = onForgotPassword,
            modifier = Modifier
                .align(Alignment.End)
                .padding(bottom = 10.dp)
                .testTag("forgot_password_btn")
        ) {
            Text(
                text = stringResource(R.string.forgot_password),
                style = TextStyle(color = colorScheme.primary)
            )

...

    //submit btn
    Button(
        onClick = { onSubmitForm(email.text.toString(), password) },
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .testTag("login_btn")
    ) {
        Text(
            text = stringResource(R.string.login),
            style = TextStyle(color = colorScheme.onPrimary),
        )
    }
...
            disabledContentColor = colorScheme.background
        ),
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .background(colorScheme.background)
            .padding(bottom = 20.dp)
            .testTag("switch_to_registration_btn")
    ) {
        Text(
            text = stringResource(R.string.register),
            style = TextStyle(color = colorScheme.onBackground),
        )
    }
...
    var repeatPasswordVisible by remember { mutableStateOf(false) }
    Text(
        text = stringResource(R.string.register),
        style = typography.headlineLarge,
        modifier = Modifier
            .padding(vertical = 30.dp)
            .testTag("registration_form_header")
    )

    // email field
    OutlinedTextField(
        state = email,
        isError = isEmailError(email.text.toString()),
...
            disabledContainerColor = colorScheme.tertiary,
            errorContainerColor = colorScheme.background
        ),
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .padding(bottom = 10.dp)
            .testTag("registration_email_field")
    )

    // password field
    OutlinedTextField(
        value = password,
        onValueChange = { it -> password = it },
...
            disabledContainerColor = colorScheme.tertiary,
            errorContainerColor = colorScheme.background
        ),
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .padding(bottom = 10.dp)
            .testTag("registration_password_field")
    )
// repeat password field
    OutlinedTextField(
        value = repeatPassword,
        onValueChange = { it -> repeatPassword = it },
        isError = isPasswordError(repeatPassword) || repeatPasswordIsWrong.value,
...
            disabledContainerColor = colorScheme.tertiary,
            errorContainerColor = colorScheme.background
        ),
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .padding(bottom = 5.dp)
            .testTag("registration_repeat_password_field")
    )
    if (authResult.value == AuthResult.USER_EXISTS) {
        Text(
            stringResource(R.string.user_with_email_exists),
            style = typography.labelSmall.copy(colorScheme.danger),
            modifier = Modifier.padding(horizontal = 5.dp)
...
        }
    }
    Row(modifier = Modifier.fillMaxWidth()) {
        Checkbox(
            checked = agreed,
            onCheckedChange = { agreed = !agreed },
            modifier = Modifier.testTag("agree_to_terms_checkBox")
                .align(Alignment.CenterVertically)
        )
        Text(
            agreementText,
            style = typography.labelSmall,
            modifier = Modifier.align(Alignment.CenterVertically)
...
    //submit btn
    Button(
        onClick = { onRegister(email.text.toString(), password, repeatPassword, true) },
        enabled = agreed,
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .testTag("register_btn")
    ) {
        Text(
            text = stringResource(R.string.register),
            style = TextStyle(color = colorScheme.onPrimary),
        )
    }
...
            disabledContentColor = colorScheme.background
        ),
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .background(colorScheme.background)
            .padding(bottom = 20.dp)
            .testTag("switch_to_login_form_btn")
    ) {
        Text(
            text = stringResource(R.string.login),
            style = TextStyle(color = colorScheme.onBackground)

        )
...
